--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "aws-sdk": "^2.1693.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
