--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,4 +41,4 @@ jobs:
       - name: Deploy Lambda Function
         run: |
           zip lambda.zip Lambda_functions.py
-          aws lambda update-function-code --function-name Call_API_From_BedRock --zip-file fileb://lambda.zip
+          aws lambda update-function-code --function-name arn:aws:lambda:ap-northeast-1:270673620947:function:Call_API_From_BedRock --zip-file fileb://lambda.zip
