--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,6 @@ jobs:
         uses: aws-actions/aws-lambda-deploy@v1.1.0
         with:
           function-name: Call_API_From_BedRock
-          source-dir: ./ 
+          code-artifacts-dir: ./ 
           handler: Lambda_functions.lambda_handler
           runtime: python3.13
