--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1693.0",
+    "lucide-vue-next": "^0.562.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
